--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 sudo: required
+
 services:
   - docker
 
 before_install:
-  - docker build staplesna/docker-react1 -f Dockerfile.dev .
+  - docker build -t staplesna/docker-react1 -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true staplesna/docker-react1 npm run test -- --coverage
